[workspace]
resolver = "3"
members = ["connect-server", "crates/mu-protocol", "game-server"]


[workspace.dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
futures-util = { version = "0.3.32", features = ["sink"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "std",
] }
