[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
# our
mu-protocol = { path = "../crates/mu-protocol" }
mu-runtime = { path = "../crates/mu-runtime" }
